Cleaning to ignore warnings

--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -221,6 +221,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ignoring 'FutureWarning: use_inf_as_na' which appears in Seaborn pairplot\n",
+    "# https://stackoverflow.com/questions/14463277/how-to-disable-python-warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +363,7 @@
        "max         59.600000      21.500000         231.000000  6300.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,9 +390,7 @@
     }
    ],
    "source": [
-    "x = df['bill_length_mm']\n",
-    "y = df['bill_depth_mm']\n",
-    "plt.scatter(x,y)\n",
+    "plt.scatter(df['bill_length_mm'],df['bill_depth_mm'])\n",
     "plt.show()"
    ]
   },
@@ -395,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -542,30 +552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x150aa38d450>"
+       "<seaborn.axisgrid.PairGrid at 0x24cc56c22d0>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -586,30 +582,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x150abe0b450>"
+       "<seaborn.axisgrid.PairGrid at 0x24cc64a8550>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,30 +612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "c:\\Users\\benka\\anaconda3\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
-      "  with pd.option_context('mode.use_inf_as_na', True):\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x150ac59bb10>"
+       "<seaborn.axisgrid.PairGrid at 0x24ccacba510>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -681,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +666,7 @@
        "Name: bill_ratio, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +702,7 @@
        "Name: flipper_ratio, dtype: float64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +917,7 @@
        "[344 rows x 9 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1086,7 @@
        "max      2.450000      25.271739  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1228,7 @@
        "max      3.258427      22.857143  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1370,7 @@
        "max      3.612676      28.506787  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1399,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1460,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
