Further work on predicting penguin sex and updating dataframe

--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "max         59.600000      21.500000         231.000000  6300.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "Text(0.5, 1.0, 'Body Mass (g)')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "336       4875.0  NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,16 +697,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a3ac6c4cd0>"
+       "<matplotlib.legend.Legend at 0x1a3b2ff6f50>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
        "[333 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,16 +942,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3964f4790>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3b343ffd0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,16 +999,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a39cd8ecd0>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3b6637c10>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1029,16 +1029,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3a4854210>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3b0d65050>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1059,16 +1059,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3a4e1c8d0>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3afa74610>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1270,16 +1270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17.49494419])"
+       "array([17.38617271])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,9 +1289,262 @@
     "\n",
     "reg = LinearRegression()\n",
     "\n",
-    "reg.fit(adelie_df['bill_length_mm'].values.reshape(-1, 1), adelie_df['bill_depth_mm'])\n",
+    "reg.fit(x_adfemale.values.reshape(-1, 1), y_adfemale)\n",
     "\n",
-    "reg.predict([[34]])"
+    "reg.predict([[34.1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Penguin #8: Bill Length 34.1. Predicted Female Bill Depth 17.4, predicted Male Bill Depth 19.2. Actual Bill Depth 18.1.\n",
+      "Female delta: 0.7. Male delta: 1.1. Penguin #8 is more likely to be Female.\n",
+      "Penguin #9: Bill Length 42.0. Predicted Female Bill Depth 18.0, predicted Male Bill Depth 19.0. Actual Bill Depth 20.2.\n",
+      "Female delta: 2.2. Male delta: 1.2. Penguin #9 is more likely to be Male.\n",
+      "Penguin #10: Bill Length 37.8. Predicted Female Bill Depth 17.7, predicted Male Bill Depth 19.1. Actual Bill Depth 17.1.\n",
+      "Female delta: 0.6. Male delta: 2.0. Penguin #10 is more likely to be Female.\n",
+      "Penguin #11: Bill Length 37.8. Predicted Female Bill Depth 17.7, predicted Male Bill Depth 19.1. Actual Bill Depth 17.3.\n",
+      "Female delta: 0.4. Male delta: 1.8. Penguin #11 is more likely to be Female.\n",
+      "Penguin #47: Bill Length 37.5. Predicted Female Bill Depth 17.6, predicted Male Bill Depth 19.1. Actual Bill Depth 18.9.\n",
+      "Female delta: 1.3. Male delta: 0.2. Penguin #47 is more likely to be Male.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attempting to predict Adelie values\n",
+    "\n",
+    "for index, row in adtopredict_df.iterrows():\n",
+    "    bill_length = row['bill_length_mm']\n",
+    "    bill_depth = row['bill_depth_mm']\n",
+    "    reg.fit(x_admale.values.reshape(-1, 1), y_admale)\n",
+    "    m_depth = reg.predict([[bill_length]])\n",
+    "    reg.fit(x_adfemale.values.reshape(-1, 1), y_adfemale)\n",
+    "    f_depth = reg.predict([[bill_length]])\n",
+    "    adfdelta = abs(round(f_depth[0],1)-bill_depth)\n",
+    "    admdelta = abs(round(m_depth[0],1)-bill_depth)\n",
+    "    print(f\"Penguin #{index}: Bill Length {bill_length}. Predicted Female Bill Depth {round(f_depth[0],1)}, predicted Male Bill Depth {round(m_depth[0],1)}. Actual Bill Depth {bill_depth}.\")\n",
+    "    if adfdelta > admdelta:\n",
+    "        prediction = \"Male\"\n",
+    "        print(f\"Female delta: {round(adfdelta, 1)}. Male delta: {round(admdelta, 1)}. Penguin #{index} is more likely to be {prediction}.\")\n",
+    "    elif admdelta > adfdelta:\n",
+    "        prediction = \"Female\"\n",
+    "        print(f\"Female delta: {round(adfdelta, 1)}. Male delta: {round(admdelta, 1)}. Penguin #{index} is more likely to be {prediction}.\")\n",
+    "    else:\n",
+    "        print(f\"Female delta: {round(adfdelta, 1)}. Male delta: {round(admdelta, 1)}. Cannot determine sex of Penguin #{index}.\")\n",
+    "    topredict_df.loc[index, 'sex'] = prediction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Penguin #246: Bill Length 44.5. Predicted Female Bill Depth 14.1, predicted Male Bill Depth 15.3. Actual Bill Depth 14.3.\n",
+      "Female delta: 0.2. Male delta: 1.0. Penguin #246 is more likely to be Female.\n",
+      "Penguin #286: Bill Length 46.2. Predicted Female Bill Depth 14.3, predicted Male Bill Depth 15.4. Actual Bill Depth 14.4.\n",
+      "Female delta: 0.1. Male delta: 1.0. Penguin #286 is more likely to be Female.\n",
+      "Penguin #324: Bill Length 47.3. Predicted Female Bill Depth 14.4, predicted Male Bill Depth 15.5. Actual Bill Depth 13.8.\n",
+      "Female delta: 0.6. Male delta: 1.7. Penguin #324 is more likely to be Female.\n",
+      "Penguin #336: Bill Length 44.5. Predicted Female Bill Depth 14.1, predicted Male Bill Depth 15.3. Actual Bill Depth 15.7.\n",
+      "Female delta: 1.6. Male delta: 0.4. Penguin #336 is more likely to be Male.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attempting to predict Gentoo values\n",
+    "\n",
+    "for index, row in gentopredict_df.iterrows():\n",
+    "    bill_length = row['bill_length_mm']\n",
+    "    bill_depth = row['bill_depth_mm']\n",
+    "    reg.fit(x_genmale.values.reshape(-1, 1), y_genmale)\n",
+    "    m_depth = reg.predict([[bill_length]])\n",
+    "    reg.fit(x_genfemale.values.reshape(-1, 1), y_genfemale)\n",
+    "    f_depth = reg.predict([[bill_length]])\n",
+    "    genfdelta = abs(round(f_depth[0],1)-bill_depth)\n",
+    "    genmdelta = abs(round(m_depth[0],1)-bill_depth)\n",
+    "    print(f\"Penguin #{index}: Bill Length {bill_length}. Predicted Female Bill Depth {round(f_depth[0],1)}, predicted Male Bill Depth {round(m_depth[0],1)}. Actual Bill Depth {bill_depth}.\")\n",
+    "    if genfdelta > genmdelta:\n",
+    "        prediction = \"Male\"\n",
+    "        print(f\"Female delta: {round(genfdelta, 1)}. Male delta: {round(genmdelta, 1)}. Penguin #{index} is more likely to be {prediction}.\")\n",
+    "    elif genmdelta > genfdelta:\n",
+    "        prediction = \"Female\"\n",
+    "        print(f\"Female delta: {round(genfdelta, 1)}. Male delta: {round(genmdelta, 1)}. Penguin #{index} is more likely to be {prediction}.\")\n",
+    "    else:\n",
+    "        print(f\"Female delta: {round(genfdelta, 1)}. Male delta: {round(genmdelta, 1)}. Cannot determine sex of Penguin #{index}.\")\n",
+    "    topredict_df.loc[index, 'sex'] = prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>34.1</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3475.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>4250.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>3700.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>2975.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>4100.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>46.2</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>4650.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>47.3</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>4725.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>44.5</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>4875.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "8    Adelie  Torgersen            34.1           18.1              193.0   \n",
+       "9    Adelie  Torgersen            42.0           20.2              190.0   \n",
+       "10   Adelie  Torgersen            37.8           17.1              186.0   \n",
+       "11   Adelie  Torgersen            37.8           17.3              180.0   \n",
+       "47   Adelie      Dream            37.5           18.9              179.0   \n",
+       "246  Gentoo     Biscoe            44.5           14.3              216.0   \n",
+       "286  Gentoo     Biscoe            46.2           14.4              214.0   \n",
+       "324  Gentoo     Biscoe            47.3           13.8              216.0   \n",
+       "336  Gentoo     Biscoe            44.5           15.7              217.0   \n",
+       "\n",
+       "     body_mass_g     sex  \n",
+       "8         3475.0  Female  \n",
+       "9         4250.0    Male  \n",
+       "10        3300.0  Female  \n",
+       "11        3700.0  Female  \n",
+       "47        2975.0    Male  \n",
+       "246       4100.0  Female  \n",
+       "286       4650.0  Female  \n",
+       "324       4725.0  Female  \n",
+       "336       4875.0    Male  "
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topredict_df"
    ]
   },
   {
