--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -8,14 +8,22 @@
     "\n",
     "This notebook contains my analysis of the famous Palmer Penguins dataset. This dataset contains measurements for three species of penguin (Adélie, Chinstrap, and Gentoo), which were observed on three islands (Biscoe, Dream, and Torgersen) in Antarctica's Palmer Archipelago.\n",
     "\n",
-    "The dataset was collected and compiled by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER, a member of the Long Term Ecological Research Network. Allison Horst [shared and maintains the dataset](https://allisonhorst.github.io/palmerpenguins/), with the aim of providing a great dataset for data exploration & visualisation, as an alternative to [the Iris dataset](https://en.wikipedia.org/wiki/Iris_flower_data_set). The dataset has been made available under a [CC-0 license](https://creativecommons.org/public-domain/cc0/) meaning it can freely be worked upon in the public domain."
+    "The dataset was collected and compiled by Dr. Kristen Gorman and the Palmer Station, Antarctica LTER, a member of the Long Term Ecological Research Network. Allison Horst [shared and maintains the dataset](https://allisonhorst.github.io/palmerpenguins/), with the aim of providing a great dataset for data exploration & visualisation, as an alternative to [the Iris dataset](https://en.wikipedia.org/wiki/Iris_flower_data_set). The dataset has been made available under a [CC-0 license](https://creativecommons.org/public-domain/cc0/) meaning it can freely be worked upon in the public domain.\n",
+    "\n",
+    "## Table of Contents\n",
+    "- [Reviewing the Dataset](#section1)\n",
+    "- [Impact of Sex on Variables](#section2)\n",
+    "- [Impact of Species on Variables](#section3)\n",
+    "- [Correlations](#section4)\n",
+    "- [Linear Regression and Predictions](#section5)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reviewing the Dataset\n",
+    "## Reviewing the Dataset <a id=\"section1\"></a>\n",
     "I will begin by importing [pandas](https://pandas.pydata.org/) as a useful tool for data analysis and manipulation. I will then use pandas to read in the dataset and take a preliminary look. As I have not worked with this dataset before, I will take some time to familiarise myself with it before proceeding to any analysis. Since I will create plots later in my analysis, I'll also take the opportunity to import [pyplot](https://matplotlib.org/3.5.3/api/_as_gen/matplotlib.pyplot.html), [seaborn](https://seaborn.pydata.org/tutorial/introduction.html), and [numpy](https://numpy.org/) at the start too. I will set the [default visual Seaborn theme](https://seaborn.pydata.org/generated/seaborn.set_theme.html#seaborn.set_theme) for the plots.\n",
     "\n",
     "Throughout this analysis, I will occasionally utilise [ChatGPT](https://chat.openai.com/) to debug code that isn't working for me. Where I do this, I will go through the suggested amendments to ensure I understand where the initial code was going wrong and what changes were made before committing them to this notebook."
@@ -23,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +241,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +286,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +404,7 @@
        "max         59.600000      21.500000         231.000000  6300.000000"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +434,7 @@
        "Text(0.5, 1.0, 'Body Mass (g)')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +685,7 @@
        "336       4875.0  NaN  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,16 +705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a3b2ff6f50>"
+       "<matplotlib.legend.Legend at 0x1a3bf23b850>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -742,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +929,7 @@
        "[333 rows x 7 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,22 +944,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impact of Sex on Variables\n",
+    "## Impact of Sex on Variables <a id=\"section2\"></a>\n",
     "To get a better view of what's happening in the data, I'm going to use [*pairplot*](https://seaborn.pydata.org/generated/seaborn.pairplot.html) in Seaborn to take an overview at how **sex** impacts each of the quantitative variables, to see if this can provide me with any insight as to where I may predict the **sex** values in our **topredict** dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3b343ffd0>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3bfa07650>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -981,13 +989,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impact of Species on Variables\n",
+    "## Impact of Species on Variables <a id=\"section3\"></a>\n",
     "I'm going to look specifically at **species** for the purpose of this analysis. Let's break out the data further so we can take a look:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,16 +1007,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3b6637c10>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3c10b8b10>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1029,16 +1037,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3b0d65050>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3c1f64cd0>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1059,16 +1067,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a3afa74610>"
+       "<seaborn.axisgrid.PairGrid at 0x1a3c3e2b450>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1102,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1162,13 +1170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Correlations\n",
+    "## Correlations <a id=\"section4\"></a>\n",
     "I'm going to compare the bill measurements, accounting for sex and species, to see if the coefficients can be used to predict the sex of our as yet sexless penguins. Since we know we only need to predict Adelie and Gentoo penguins, I am going to exclude the Chinstrap species here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1256,47 +1264,63 @@
     "| Adelie    | -0.04  | 0.16 |\n",
     "| Gentoo    |  0.31  | 0.43 |\n",
     "\n",
-    "My inclination is that these would be helpful in predicting the **sex** of our penguins, but I will need to do further research into this method. For now, this is beyond the scope of my analysis."
+    "My inclination is that these could be helpful in predicting the **sex** of our penguins, but I will need to do further research into this method. For now, this is beyond the scope of my analysis."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Regression\n",
+    "## Linear Regression and Predictions <a id=\"section5\"></a>\n",
     "\n",
-    "Having looked further, running a Linear Regression may be helpful at predicting the **sex** of our penguins with our available data. I'm going to attempt using [SciKit Learn](https://scikit-learn.org/) to run a predictive value from a Linear Regression."
+    "In the course of my research, I found that running a Linear Regression may be helpful at predicting the **sex** of our penguins with our available data. I'm going to attempt using [SciKit Learn](https://scikit-learn.org/) to run a predictive value from a Linear Regression.\n",
+    "\n",
+    "First, I'm going to import the module, and attempt to familiarise myself with the function by plugging in a **bill_length_mm** and asking for it to predict a **bill_depth_mm** value on that basis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17.38617271])"
+       "array([17.49357853])"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Familiarise myself with Scikit Learn and attempt to predict bill_depth_mm\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "reg = LinearRegression()\n",
     "\n",
-    "reg.fit(x_adfemale.values.reshape(-1, 1), y_adfemale)\n",
+    "reg.fit(sex_df[\"bill_length_mm\"].values.reshape(-1, 1), sex_df[\"bill_depth_mm\"].values)\n",
     "\n",
-    "reg.predict([[34.1]])"
+    "reg.predict([[40]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This seems to work - however, we know that there is significant variance across **species** in the overall dataset. Now I'm going to look on a species-by-species basis, specifically at Adelie and Gentoo.\n",
+    "\n",
+    "I have built a For loop below - my intention is for it to iterate over the **to_predict** dataframe, extract the Bill Length, and predict the Bill Depth value for Female and Male penguins on the basis of the overall dataset. I will then calculate if the actual Bill Depth value is closer to the Female or Male prediction, and on that basis make an informed prediction as to the sex of the penguins on the **to_predict** dataframe.\n",
+    "\n",
+    "The loop then finishes by assigning the predicted sex back onto the **to_predict** dataframe, overwriting the NaN values.\n",
+    "\n",
+    "There are separate loops for the Adelie and Gentoo sets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1385,8 +1409,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This seemed to work and there were no penguins who were in the middle of the female and male predictions, which means we could take a reasonable guess in each case as to the penguin's sex.\n",
+    "\n",
+    "Let's go back to our **to_predict** dataframe to see if it updated correctly:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1538,12 +1571,13 @@
        "336       4875.0    Male  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Check if sex predictions have been applied to dataset\n",
     "topredict_df"
    ]
   },
@@ -1551,13 +1585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TEMPORARY - DELETE BEFORE SUBMISSION** \n",
-    "Resources to be reviewed in the course of my analysis:\n",
-    "\n",
-    "- https://towardsdatascience.com/matplotlib-seaborn-basics-2bd7b66dbee2\n",
-    "- https://seaborn.pydata.org/generated/seaborn.pairplot.html\n",
-    "- https://www.educba.com/numpy-polyfit/\n",
-    "- https://www.youtube.com/watch?v=CtsRRUddV2s\n"
+    "Looks like this worked - we have used the data to make a reasonable prediction as to the sex of each of our penguins. There's clearly plenty more we could do here - we could use the data to predict the percentage likeliness that a penguin falls into either sex grouping, and we could have looked at the impact of island spread on the data. But I was already aware that I was straying beyond the brief and I didn't want to wander too far. Thanks for taking the time to read my analysis."
    ]
   },
   {
